force-app/main/default/objects/Account/fields/Agency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agency_Phone__c</fullName>
    <formula>Agent_to_Bill__r.Agency_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Phone</label>
    <type>Text</type>
</CustomField>