force-app/main/default/objects/Account/fields/Agent_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Address__c</fullName>
    <formula>Agent__r.Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Address</label>
    <type>Text</type>
</CustomField>