force-app/main/default/objects/Account/fields/Agent_Address_Application__c.field-meta.xml
<CustomField>
    <fullName>Agent_Address_Application__c</fullName>
    <label>Agent Address (Application)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>