force-app/main/default/objects/Account/fields/Agent_City__c.field-meta.xml
<CustomField>
    <fullName>Agent_City__c</fullName>
    <label>Agent City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>