force-app/main/default/objects/Account/fields/Agent_Email_Application__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_Application__c</fullName>
    <label>Producer Email (Application)</label>
    <type>Email</type>
</CustomField>