force-app/main/default/objects/Account/fields/Agent_Name_Application__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name_Application__c</fullName>
    <label>Agency Name (Application)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>