force-app/main/default/objects/Account/fields/Agent_Phone_Application__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone_Application__c</fullName>
    <label>Producer Phone (Application)</label>
    <type>Phone</type>
</CustomField>