force-app/main/default/objects/Account/fields/Agent_State__c.field-meta.xml
<CustomField>
    <fullName>Agent_State__c</fullName>
    <label>Agent State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>