force-app/main/default/objects/Account/fields/Agent_to_Bill__c.field-meta.xml
<CustomField>
    <fullName>Agent_to_Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>