force-app/main/default/objects/Account/fields/Agent_Zip__c.field-meta.xml
<CustomField>
    <fullName>Agent_Zip__c</fullName>
    <label>Agent Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>