force-app/main/default/objects/Account/fields/Authorized_Represenatative_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Represenatative_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized Represenatative Agreement</label>
    <type>Checkbox</type>
</CustomField>