force-app/main/default/objects/Account/fields/breadwinner_qbo__Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Total_Amount_Due__c</fullName>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>