force-app/main/default/objects/Account/fields/breadwinner_qbo__Total_Unallocated_Credit__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Total_Unallocated_Credit__c</fullName>
    <label>Total Unallocated Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>