force-app/main/default/objects/Account/fields/Contact_Person_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Last_Name__c</fullName>
    <label>Contact Person Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>