force-app/main/default/objects/Account/fields/Current_Agency__c.field-meta.xml
<CustomField>
    <fullName>Current_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Agency</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipLabel>Accounts (Current Agency)</relationshipLabel>
    <relationshipName>Account1</relationshipName>
    <type>Lookup</type>
</CustomField>