force-app/main/default/objects/Account/fields/FEIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN__c</fullName>
    <label>FEIN#</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>