force-app/main/default/objects/Account/fields/HomeP__c.field-meta.xml
<CustomField>
    <fullName>HomeP__c</fullName>
    <formula>IF(  Type_of_Property__c   = &quot;Homeowners Association&quot; ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HomeP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>