force-app/main/default/objects/Account/fields/Indicated_Premium__c.field-meta.xml
<CustomField>
    <fullName>Indicated_Premium__c</fullName>
    <formula>199 + ( Number_of_Units__c *2)+( NewP__c *(200+ Number_of_Units__c *3))-( NewP__c  *  HomeP__c * ( Number_of_Units__c  * 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>