force-app/main/default/objects/Account/fields/Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Name</label>
    <type>Text</type>
</CustomField>