force-app/main/default/objects/Account/fields/NewP__c.field-meta.xml
<CustomField>
    <fullName>NewP__c</fullName>
    <formula>IF( Effective_Date__c  &gt; DATE(2021,12,31) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NewP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>