force-app/main/default/objects/Account/fields/PA1__c.field-meta.xml
<CustomField>
    <fullName>PA1__c</fullName>
    <label>PA1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>