force-app/main/default/objects/Account/fields/PFactor__c.field-meta.xml
<CustomField>
    <fullName>PFactor__c</fullName>
    <label>PFactor</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>