force-app/main/default/objects/Account/fields/Physical_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_2__c</fullName>
    <label>Physical Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>