force-app/main/default/objects/Account/fields/Physical_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Street_Address__c</fullName>
    <label>Physical Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>