force-app/main/default/objects/Account/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Applicants/Insureds</relationshipLabel>
    <relationshipName>Applicants_Insureds</relationshipName>
    <type>Lookup</type>
</CustomField>