force-app/main/default/objects/Account/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Condo/Homeowner&apos;s Association</fullName>
                <label>Condo/Homeowners Association</label>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>