force-app/main/default/objects/Account/fields/Previous_Agency__c.field-meta.xml
<CustomField>
    <fullName>Previous_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Agency</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipLabel>Accounts (Previous Agency)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>