force-app/main/default/objects/Account/fields/Previous_Agent__c.field-meta.xml
<CustomField>
    <fullName>Previous_Agent__c</fullName>
    <label>Previous Agent?</label>
    <length>35</length>
    <type>Text</type>
</CustomField>