force-app/main/default/objects/Account/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pxx</label>
    <referenceTo>Producer__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>