force-app/main/default/objects/Account/fields/Producer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_First_Name__c</fullName>
    <label>Producer First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>