force-app/main/default/objects/Account/fields/Producer_Name_Application__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name_Application__c</fullName>
    <label>Producer Name (Application)</label>
    <length>45</length>
    <type>Text</type>
</CustomField>