force-app/main/default/objects/Account/fields/Producer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Producer_Phone__c</fullName>
    <formula>Producer__r.Producer_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer Phone</label>
    <type>Text</type>
</CustomField>