force-app/main/default/objects/Account/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Applicants/Insureds</relationshipLabel>
    <relationshipName>Applicants_Insureds</relationshipName>
    <type>Lookup</type>
</CustomField>