force-app/main/default/objects/Account/fields/QB_BW_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>QB_BW_Account_Status__c</fullName>
    <formula>IF( QB_Total_Amount_Invoiced__c = 0,
IMAGE ( &quot;https://breadwinner.com/wp-content/uploads/2020/06/Never-Billed.png&quot;,&quot;Never Billed&quot;),

IF( QB_Total_Amount_Overdue__c &gt; 0,
IMAGE ( &quot;https://breadwinner.com/wp-content/uploads/2020/06/Overdue.png&quot;,&quot;Overdue&quot;),

IF( QB_Total_Amount_Due__c &gt; 0,
IMAGE ( &quot;https://breadwinner.com/wp-content/uploads/2020/06/Due.png&quot;,&quot;Due&quot;),

IMAGE ( &quot;https://breadwinner.com/wp-content/uploads/2020/06/Paid.png&quot;,&quot;Paid&quot;)

)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BW Account Status</label>
    <type>Text</type>
</CustomField>