force-app/main/default/objects/Account/fields/QB_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>QB External Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>