force-app/main/default/objects/Account/fields/QB_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Parent_Id__c</fullName>
    <externalId>true</externalId>
    <label>QB_Parent_Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>