force-app/main/default/objects/Account/fields/QB_Sync_Token__c.field-meta.xml
<CustomField>
    <fullName>QB_Sync_Token__c</fullName>
    <label>QB Sync Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>