force-app/main/default/objects/Account/fields/QB_Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>QB_Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>