force-app/main/default/objects/Account/fields/Quote_Producer_Update__c.field-meta.xml
<CustomField>
    <fullName>Quote_Producer_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Producer Update</label>
    <type>Checkbox</type>
</CustomField>