force-app/main/default/objects/Account/fields/SunBiz__c.field-meta.xml
<CustomField>
    <fullName>SunBiz__c</fullName>
    <label>SunBiz</label>
    <type>Url</type>
</CustomField>