force-app/main/default/objects/Account/fields/THEDAY__c.field-meta.xml
<CustomField>
    <fullName>THEDAY__c</fullName>
    <formula>TEXT(DAY( TODAY() ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>THEDAY</label>
    <type>Text</type>
</CustomField>