force-app/main/default/objects/Account/fields/THEMONTH__c.field-meta.xml
<CustomField>
    <fullName>THEMONTH__c</fullName>
    <formula>TEXT( MONTH(TODAY()) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>THEMONTH</label>
    <type>Text</type>
</CustomField>