force-app/main/default/objects/Account/fields/THEYEAR__c.field-meta.xml
<CustomField>
    <fullName>THEYEAR__c</fullName>
    <formula>TEXT(YEAR( TODAY() ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>THEYEAR</label>
    <type>Text</type>
</CustomField>