force-app/main/default/objects/Account/fields/Total_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Value__c</fullName>
    <formula>(Indicated_Premium__c * VALUE(TEXT( Commission__c )))/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount  Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>