force-app/main/default/objects/Account/fields/Type_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Property__c</fullName>
    <label>Type of Property</label>
    <length>40</length>
    <type>Text</type>
</CustomField>