force-app/main/default/objects/Account/fields/Type_of_Risk_2__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Risk_2__c</fullName>
    <label>Type of Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>