force-app/main/default/objects/Account/fields/Type_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Risk__c</fullName>
    <label>Type of Risk (old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Condominium</fullName>
            </value>
            <value>
                <fullName>Homeowner Association</fullName>
                <label>Homeowners Association</label>
            </value>
            <value>
                <fullName>Apt./Hotel/Time Share</fullName>
                <label>Co-op</label>
            </value>
            <value>
                <fullName>Master Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>