force-app/main/default/objects/Account/recordTypes/Condominium.recordType-meta.xml
<RecordType>
    <fullName>Condominium</fullName>
    <active>true</active>
    <label>Insured</label>
</RecordType>