force-app/main/default/objects/Account/recordTypes/Current_Insured.recordType-meta.xml
<RecordType>
    <fullName>Current_Insured</fullName>
    <active>false</active>
    <description>Current Insured</description>
    <label>Current Insured</label>
</RecordType>