force-app/main/default/objects/Account/recordTypes/ParentAgencies.recordType-meta.xml
<RecordType>
    <fullName>ParentAgencies</fullName>
    <active>true</active>
    <label>Agencies</label>
</RecordType>