force-app/main/default/objects/Account/validationRules/No_of_unit_greater_than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>No_of_unit_greater_than_1</fullName>
    <active>true</active>
    <errorConditionFormula>$RecordType.Name = &apos;Insured&apos; &amp;&amp; Number_of_Units__c  &lt;= 1</errorConditionFormula>
    <errorDisplayField>Number_of_Units__c</errorDisplayField>
    <errorMessage>The number of units must be greater than 1</errorMessage>
</ValidationRule>