force-app/main/default/objects/Account/validationRules/validation_for_parent_agency.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_for_parent_agency</fullName>
    <active>true</active>
    <errorConditionFormula>$RecordType.Name = &apos;Agencies&apos; &amp;&amp; Number_of_Units__c   &lt;&gt; 1</errorConditionFormula>
    <errorDisplayField>Number_of_Units__c</errorDisplayField>
    <errorMessage>No. of units must be equal to 1</errorMessage>
</ValidationRule>