force-app/main/default/objects/Account/listViews/breadwinner_qbo__Accounts_with_QBO_Invoices.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__Accounts_with_QBO_Invoices</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>breadwinner_qbo__BW_Account_Status__c</columns>
    <columns>breadwinner_qbo__Total_Amount_Overdue__c</columns>
    <columns>breadwinner_qbo__Total_Amount_Due__c</columns>
    <columns>breadwinner_qbo__Total_Amount_Paid__c</columns>
    <columns>breadwinner_qbo__Total_Amount_Invoiced__c</columns>
    <columns>breadwinner_qbo__Total_Amount_Credit__c</columns>
    <columns>breadwinner_qbo__Total_Unallocated_Credit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_qbo__Total_Amount_Invoiced__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Accounts with QuickBooks Online Invoices</label>
</ListView>